cmake_minimum_required(VERSION 2.8.3)
project(dr_odom2)
SET(CMAKE_BUILD_TYPE "Release")
find_package(Eigen3 REQUIRED)
include_directories(include ../../common/include ${EIGEN3_INCLUDE_DIR})
file(GLOB_RECURSE ALL_SRCS src/*)
add_library(dr_odom2_lib SHARED ${ALL_SRCS})
set(ALL_TARGET_LIBRARIES ${EIGEN3_LIBS})
target_link_libraries(dr_odom2_lib PUBLIC ${ALL_TARGET_LIBRARIES})
